Fix the width of the date column to stop the table jumping around

--- a/client/me/billing-history/style.scss
+++ b/client/me/billing-history/style.scss
@@ -381,6 +381,10 @@
 	}
 }
 
+.billing-history__date {
+	width: 170px;
+}
+
 .billing-history__transactions-header-select-dropdown {
 	padding: 8px 12px;
 	position: absolute;
